--- a/templates/tables/wrong-number.html
+++ b/templates/tables/wrong-number.html
@@ -202,9 +202,9 @@
                                     <ul class="list-unstyled d-flex align-items-center gap-2 mb-0 pagination-common-style"
                                         id="pagination2"></ul>
                                     <div class="d-flex gap-2">
-                                        <button class="btn btn-primary" onclick="printTable2()">
+                                        <!-- <button class="btn btn-primary" onclick="printTable2()">
                                             <i class="bi bi-printer"></i> Print
-                                        </button>
+                                        </button> -->
                                         <button class="btn btn-success" onclick="exportToExcel2()">
                                             <i class="bi bi-file-earmark-excel"></i> Excel
                                         </button>
